force-app/main/default/objects/REV_Contract_MasterHistory__c/REV_Contract_MasterHistory__c.object-meta.xml
<CustomObject>
    <label>REV Contract Master History</label>
    <nameField>
        <displayFormat>REVH-{0000000}</displayFormat>
        <label>REV Contract Number History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REV Contract Master History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>