force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <label>Country Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RT_Revolution_Country</valueSetName>
    </valueSet>
</CustomField>