force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rev Contract Created By ID</inlineHelpText>
    <label>Rev Contract Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rev_Contract_History</relationshipName>
    <type>Lookup</type>
</CustomField>