force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <inlineHelpText>Rev Contract Created Date</inlineHelpText>
    <label>Rev Contract Created Date</label>
    <type>DateTime</type>
</CustomField>