force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>REV Contract Master History</relationshipLabel>
    <relationshipName>REV_Contract_MasterHistory</relationshipName>
    <type>Lookup</type>
</CustomField>