force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rev Contract Deleted</label>
    <type>Checkbox</type>
</CustomField>