force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <inlineHelpText>Rev Contract Last Activity Date</inlineHelpText>
    <label>Rev Contract Last Activity Date</label>
    <type>Date</type>
</CustomField>