force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rev Contract Last Modified By ID</inlineHelpText>
    <label>Rev Contract Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rev_Contract_History1</relationshipName>
    <type>Lookup</type>
</CustomField>