force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <inlineHelpText>Rev Contract Last Modified Date</inlineHelpText>
    <label>Rev Contract Last Modified Date</label>
    <type>DateTime</type>
</CustomField>