force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <inlineHelpText>Rev Contract Last Referenced Date</inlineHelpText>
    <label>Rev Contract Last Referenced Date</label>
    <type>DateTime</type>
</CustomField>