force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <inlineHelpText>Rev Contract Last Viewed Date</inlineHelpText>
    <label>Rev Contract Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>