force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/List_Price_Tier__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Price Tier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MY Code Value Mapping</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>MY Tier</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Name</field>
            <operation>contains</operation>
            <value>Tier 1</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>REV Contract Master History</relationshipLabel>
    <relationshipName>REV_Contract_Master6History</relationshipName>
    <type>Lookup</type>
</CustomField>