force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rev Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rev_Contract_History3</relationshipName>
    <type>Lookup</type>
</CustomField>