force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/Parent_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Parent_RecordId__c</fullName>
    <label>Rev Contract Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>