force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Aspired_Margin__c.field-meta.xml
<CustomField>
    <fullName>RE_Aspired_Margin__c</fullName>
    <label>Aspired Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>