force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Custom_Ops_Calculation__c.field-meta.xml
<CustomField>
    <fullName>RE_Custom_Ops_Calculation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Structure</label>
    <referenceTo>RE_Custom_Ops_Configuration__c</referenceTo>
    <relationshipLabel>REV Contract Master History</relationshipLabel>
    <relationshipName>REV_Contract_Master_History1</relationshipName>
    <type>Lookup</type>
</CustomField>