force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Division__c.field-meta.xml
<CustomField>
    <fullName>RE_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>REV Contract Master History(Division)</relationshipLabel>
    <relationshipName>REV_Contract_Master3History</relationshipName>
    <type>Lookup</type>
</CustomField>