force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Inactive_state__c.field-meta.xml
<CustomField>
    <fullName>RE_Inactive_state__c</fullName>
    <label>Inactive state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Temporary blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>