force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Is_Active_Contract__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_Active_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Contract</label>
    <type>Checkbox</type>
</CustomField>