force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_IsHedged__c.field-meta.xml
<CustomField>
    <fullName>RE_IsHedged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHedged</label>
    <type>Checkbox</type>
</CustomField>