force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_PH_Approval_Scheme__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Approval_Scheme__c</fullName>
    <label>RE Approval scheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Margin__Homebased_MOGAS_Other Sector</fullName>
            </value>
            <value>
                <fullName>Fixed price_OCI</fullName>
            </value>
            <value>
                <fullName>Fixed price_OCLS</fullName>
            </value>
            <value>
                <fullName>Fixed price_OCM</fullName>
            </value>
            <value>
                <fullName>Margin__Homebased_AGO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin__Homebased_FO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin__Homebased_KERO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCI_CF_AGO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCI_CF_AGO_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCI_CF_FO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCI_CF_FO_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCI_CF_KERO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCI_CF_KERO_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCI_CF_MOGAS_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCI_CF_MOGAS_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCLS_CF_AGO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCLS_CF_AGO_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCLS_CF_FO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCLS_CF_FO_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCLS_CF_KERO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCLS_CF_KERO_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCLS_CF_MOGAS_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCLS_CF_MOGAS_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCM_CF_AGO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCM_CF_AGO_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCM_CF_FO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCM_CF_FO_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCM_CF_KERO_Other Sector</fullName>
            </value>
            <value>
                <fullName>Margin_OCM_CF_KERO_WHOLESALE AND MARINE</fullName>
            </value>
            <value>
                <fullName>Margin_OCM_CF_MOGAS_Other Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>