force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_PH_Loading_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Loading_Group__c</fullName>
    <label>Loading Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
            </value>
            <value>
                <fullName>0002</fullName>
            </value>
            <value>
                <fullName>0008</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>8</fullName>
                <isActive>false</isActive>
                <label>8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>