force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_PH_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Material_Group__c</fullName>
    <label>Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White products</fullName>
            </value>
            <value>
                <fullName>Black products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>