force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Price_support__c.field-meta.xml
<CustomField>
    <fullName>RE_Price_support__c</fullName>
    <label>Price support</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>