force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Pricing_Level__c.field-meta.xml
<CustomField>
    <fullName>RE_Pricing_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Level</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MY Code Value Mapping</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>MY Pricing Level</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>REV Contract Master History(Pricing Level)</relationshipLabel>
    <relationshipName>REV_Contract_Master2History</relationshipName>
    <type>Lookup</type>
</CustomField>