force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Pricing_Structure__c.field-meta.xml
<CustomField>
    <fullName>RE_Pricing_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Structure</label>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>REV Contract Master History(Pricing Structure)</relationshipLabel>
    <relationshipName>REV_Contract_MasterREHistory</relationshipName>
    <type>Lookup</type>
</CustomField>