force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_PS_valid_from__c.field-meta.xml
<CustomField>
    <fullName>RE_PS_valid_from__c</fullName>
    <description>PH customer opps Price support valid from</description>
    <label>PS valid from</label>
    <type>Date</type>
</CustomField>