force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_PS_valid_to__c.field-meta.xml
<CustomField>
    <fullName>RE_PS_valid_to__c</fullName>
    <description>PH customer Opps valid from</description>
    <label>PS valid to</label>
    <type>Date</type>
</CustomField>