force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Rebate__c.field-meta.xml
<CustomField>
    <fullName>RE_Rebate__c</fullName>
    <label>Rebate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>