force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Reference_Period__c.field-meta.xml
<CustomField>
    <fullName>RE_Reference_Period__c</fullName>
    <label>Reference Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Calulation_Type</valueSetName>
    </valueSet>
</CustomField>