force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Secondary_Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_Secondary_Transport_Cost__c</fullName>
    <label>Secondary Transport Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>