force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Ship_To_Number__c.field-meta.xml
<CustomField>
    <fullName>RE_Ship_To_Number__c</fullName>
    <formula>RE_Customer_Name__r.AccountNumber</formula>
    <label>Ship To</label>
    <type>Text</type>
</CustomField>