force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Standard_Discount__c.field-meta.xml
<CustomField>
    <fullName>RE_Standard_Discount__c</fullName>
    <formula>VALUE( RE_Tier__r.Value__c )</formula>
    <label>Standard Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>