force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Std_Disc_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>RE_Std_Disc_Valid_From__c</fullName>
    <label>Std Disc Valid From</label>
    <type>Date</type>
</CustomField>