force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RE_Temp_Disc_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>RE_Temp_Disc_Valid_To__c</fullName>
    <label>Temporary Discount Valid To</label>
    <type>Date</type>
</CustomField>