force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Comment__c.field-meta.xml
<CustomField>
    <fullName>RT_Comment__c</fullName>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>