force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Condition_Description__c.field-meta.xml
<CustomField>
    <fullName>RT_Condition_Description__c</fullName>
    <formula>RT_Condition_Type__r.Value__c</formula>
    <label>Condition Description</label>
    <type>Text</type>
</CustomField>