force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_CONDITION_TABLE_ID__c.field-meta.xml
<CustomField>
    <fullName>RT_CONDITION_TABLE_ID__c</fullName>
    <label>Condition Table ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>