force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>RT_Condition_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Code - Value mapping</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>Condition Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>REV Contract Master History(Condition Type)</relationshipLabel>
    <relationshipName>Aureus_DataHistory</relationshipName>
    <type>Lookup</type>
</CustomField>