force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Contract_Customer_Sold_to_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Contract_Customer_Sold_to_Number__c</fullName>
    <formula>SAP_Contract__r.RT_Sold_to_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Customer Sold to Number</label>
    <type>Text</type>
</CustomField>