force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Contract_Number__c</fullName>
    <formula>SAP_Contract__r.RT_Contract_Number__c</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>