force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_DIVISION_DESC__c.field-meta.xml
<CustomField>
    <fullName>RT_DIVISION_DESC__c</fullName>
    <label>DIVISION_DESC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>