force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Key_Value__c.field-meta.xml
<CustomField>
    <fullName>RT_Key_Value__c</fullName>
    <label>Key Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>