force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Material_Desc__c.field-meta.xml
<CustomField>
    <fullName>RT_Material_Desc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>REV Contract Master History</relationshipLabel>
    <relationshipName>Aureus_DataHistory</relationshipName>
    <type>Lookup</type>
</CustomField>