force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Material_Number__c</fullName>
    <formula>RT_Material_Desc__r.RT_Product_Code__c</formula>
    <label>Material Number</label>
    <type>Text</type>
</CustomField>