force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Plant_Code__c</fullName>
    <formula>RT_Plant_Desc__r.RE_Location_Code__c</formula>
    <label>Plant Code</label>
    <type>Text</type>
</CustomField>