force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_SALES_GRP_CODE__c.field-meta.xml
<CustomField>
    <fullName>RT_SALES_GRP_CODE__c</fullName>
    <label>SALES_GRP_CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>