force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Ship_to_Name__c.field-meta.xml
<CustomField>
    <fullName>RT_Ship_to_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Customer_Type__c</field>
            <operation>equals</operation>
            <value>Ship To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>REV Contract Master History(Ship to Name)</relationshipLabel>
    <relationshipName>Aureus_Data_Ship_To_History</relationshipName>
    <type>Lookup</type>
</CustomField>