force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Sold_to_Name__c.field-meta.xml
<CustomField>
    <fullName>RT_Sold_to_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold to Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>REV Contract Master History(Sold to Name)</relationshipLabel>
    <relationshipName>Aureus_DataHistory</relationshipName>
    <type>Lookup</type>
</CustomField>