force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/RT_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>RT_Surcharge__c</fullName>
    <label>Surcharge</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>