force-app/main/default/objects/REV_Contract_MasterHistory__c/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <inlineHelpText>Rev Contract System Modstamp</inlineHelpText>
    <label>Rev Contract System Modstamp</label>
    <type>DateTime</type>
</CustomField>