force-app/main/default/objects/REV_Contract_MasterHistory__c/listViews/Malaysia_Active_Customer.listView-meta.xml
<ListView>
    <fullName>Malaysia_Active_Customer</fullName>
    <columns>NAME</columns>
    <columns>RE_Customer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RE_Ship_To_Number__c</columns>
    <columns>RE_Sold_To_Number__c</columns>
    <columns>RT_Material_Desc__c</columns>
    <columns>RT_Plant_Desc__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RT_Valid_From__c</columns>
    <columns>RT_Valid_To__c</columns>
    <columns>RE_PH_Approval_Scheme__c</columns>
    <columns>RE_Distribution_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>REV-0057513,REV-0057514,REV-0057666,REV-0057668,REV-0057665,REV-0057667,REV-0057661,REV-0057662,REV-0057663,REV-0057664</value>
    </filters>
    <label>Malaysia Active Contracts</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
    </sharedTo>
</ListView>